<resources>
    <string name="app_name">Right Fit</string>
    <string name="logo">RIGHT FIT</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Não tem uma conta? Cadastre-se.</string>
    <string name="title_cadastro">Cadastro</string>
    <string name="Alimento">Alimento</string>
    <string name="Quantidade">Quantidade</string>
    <string name="Calorias">Calorias</string>
    <string name="Gorduras">Gorduras</string>
    <string name="Carboidratos">Carboidratos</string>
    <string name="Proteinas">Proteinas</string>
    <string name="Fibras">Fibras</string>
    <string name="text_informacoes">Informações Nutricionais</string>
    <string name="menu_inicial">Início</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_imc">IMC</string>
    <string name="menu_configurações">Configurações</string>
    <string name="Calorias_restantes">Calorias restantes</string>
    <string name="Calorias_ingeridas">Ingeridas</string>
    <string name="Restantes">Restantes</string>
    <string name="Meta">Meta</string>
    <string name="Adicionar">Adicionar Alimentos</string>
    <string name="Manha">Café da Manhã</string>
    <string name="Tarde">Almoço</string>
    <string name="Noite">Janta</string>
    <string name="Peso">Peso</string>
    <string name="Altura">Altura</string>
    <string name="Adicionar_Informacoes">Adicionar Informações</string>
    <string name="Gorduras_Ingeridas">Gorduras Ingeridas</string>
    <string name="Proteinas_Ingeridas">Proteinas Ingeridas</string>
    <string name="Carboidratos_Ingeridas">Carboidratos Ingeridas</string>
    <string name="Indicada">Indicado</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>